<resources>
    <string name="app_name">Mango Browser</string>
    <string name="settings">settings</string>
    <string name="add_new_tab">Add new tab</string>
    <string name="back">back</string>
    <string name="search_history">search history</string>
    <string name="favorite_tabs">favorite tabs</string>
    <string name="try_again">Try again</string>
    <string name="cannot_open_the_site">Cannot open the site</string>
    <string name="check_your_internet_connection">Check your Internet connection…</string>
    <string name="home_page">Home page:</string>
    <string name="dark_theme">Dark theme:</string>
    <string name="use_js">Use JavaScript (recommended):</string>
    <string name="about_app_caption">about app:</string>

    <string name="about_app">"Mango browser is a simple native Android browser based on Android WebView.
Actually it was developed to be a small pet project.
I am sure this app contains lots of bugs. You can see the source code of the Mango Browser here:

https://github.com/HolodTema/android-mango-browser"</string>

    <string name="add_site_to_favorites_list">Add site to favorites list:</string>
    <string name="site_name">Site name:</string>
    <string name="site_url">Site url:</string>
    <string name="add">Add</string>
    <string name="there_are_no_favorite_tabs">There are no favorite tabs</string>
    <string name="clear_history">Clear history</string>
    <string name="amount_history_tabs">Amount entries in history: %d</string>
    <string name="reload_page">reload page</string>
    <string name="share">share</string>
    <string name="share_page_url">Share page URL</string>
    <string name="enter_url_address">Enter url address</string>
    <string name="close">close</string>
    <string name="incognito_mode">Incognito mode</string>
    <string name="welcome_to_incognito_mode">Welcome to Incognito mode!</string>
    <string name="about_incognito_mode">You can surf the Internet more privately:\n\n\nMango won\'t save:\n\n* cookies and site data\n* search history\n* information entered in forms\n\nBut your actions might be visible to your Internet provider or system administrator.\n\nDark UI theme for dark intentions…</string>
    <string name="appearance">appearance</string>
    <string name="webview_settings">WebView settings</string>
    <string name="use_zoom">Use zoom controls:</string>
    <string name="version">Version %s</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="files">Files</string>
    <string name="choose_file_source">Choose file source:</string>
    <string name="cancel">Cancel</string>
    <string name="select_file">Select file:</string>
    <string name="select_image">Select image:</string>
</resources>