<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryContainer"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryContainer"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_caption_favorite_tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/settings"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            app:tint="?attr/colorOnPrimary" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/colorSecondaryContainer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/text_caption_home_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/home_page"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_home_page"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textColor="?attr/colorOnSecondary"
                app:layout_constraintBottom_toBottomOf="@+id/text_caption_home_page"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_caption_home_page"
                app:layout_constraintTop_toTopOf="@+id/text_caption_home_page" />

            <TextView
                android:id="@+id/text_caption_dark_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/dark_theme"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_caption_home_page" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_dark_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/orange"
                app:layout_constraintBottom_toBottomOf="@+id/text_caption_dark_theme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_caption_dark_theme"
                app:thumbTint="@color/selector_switch_thumb"
                app:trackTint="@color/selector_switch_track" />

            <TextView
                android:id="@+id/text_caption_use_js"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/use_js"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_caption_dark_theme" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_use_js"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/text_caption_use_js"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_caption_use_js"
                app:thumbTint="@color/selector_switch_thumb"
                app:trackTint="@color/selector_switch_track" />

            <TextView
                android:id="@+id/text_caption_about_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/about_app_caption"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_caption_use_js" />

            <TextView
                android:id="@+id/text_about_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_app"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/text_caption_about_app" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</LinearLayout>