<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:background="@drawable/background_bottom_sheet"
    android:paddingVertical="16dp">

    <ImageButton
        android:id="@+id/button_close_bottom_sheet"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_close_bottom_sheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/text_caption_add_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_site_to_favorites_list"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_caption_site_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_caption_add_favorite" />

    <EditText
        android:padding="4dp"
        android:id="@+id/edit_site_name"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edit_web_request"
        app:layout_constraintBottom_toBottomOf="@+id/text_caption_site_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="4dp"
        android:textSize="16sp"
        tools:text="Site name"
        app:layout_constraintStart_toEndOf="@+id/text_caption_site_name"
        app:layout_constraintTop_toTopOf="@+id/text_caption_site_name" />

    <TextView
        android:id="@+id/text_caption_site_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_url"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_caption_site_name" />

    <TextView
        android:id="@+id/text_site_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/text_caption_site_url"
        android:layout_marginTop="4dp"
        tools:text="https://translate.yandex.ru/"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/add"
        android:padding="0dp"
        android:id="@+id/button_add_to_favorites"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_site_url" />


</androidx.constraintlayout.widget.ConstraintLayout>