<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/text_caption_incognito"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/incognito_mode"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginHorizontal="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/button_about_incognito"
        app:layout_constraintStart_toEndOf="@+id/button_close"
        app:layout_constraintTop_toTopOf="@id/button_close"
        app:layout_constraintBottom_toBottomOf="@id/button_close"/>

    <ImageButton
        android:id="@+id/button_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <ImageButton
        android:id="@+id/button_more"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <ImageButton
        android:id="@+id/button_home_page"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_home_page"
        app:layout_constraintEnd_toStartOf="@id/button_more"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <ImageButton
        android:id="@+id/button_about_incognito"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_help"
        app:layout_constraintEnd_toStartOf="@id/button_home_page"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <ImageButton
        android:id="@+id/button_search"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_close"
        app:tint="?attr/colorOnPrimary" />

    <ImageButton
        android:id="@+id/button_clear_edit_web_request"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_clear_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_close"
        app:tint="?attr/colorOnPrimary" />

    <EditText
        android:id="@+id/edit_web_request"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/enter_url_address"
        android:textColorHint="@color/gray"
        android:background="@drawable/background_edit_web_request"
        android:inputType="textUri"
        android:padding="4dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_search"
        app:layout_constraintStart_toEndOf="@+id/button_clear_edit_web_request"
        app:layout_constraintTop_toBottomOf="@+id/button_close" />

    <ProgressBar
        android:id="@+id/progress_web_loading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="4dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/progress_web_download"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/edit_web_request" />

    <TextView
        android:id="@+id/text_web_error_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cannot_open_the_site"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_web_loading" />

    <TextView
        android:id="@+id/text_web_error_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/check_your_internet_connection"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="18sp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_web_error_header" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_error_connect_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:padding="4dp"
        android:text="@string/try_again"
        android:textColor="?attr/colorOnPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent" />

    <WebView
        tools:visibility="gone"
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_web_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>